Logging cleanup